feat: Enhance inventory and prescription modules
Introduce new exception handling for missing entities by adding EntityNotFoundException class. Replace IllegalArgumentException with EntityNotFoundException for clearer error context.

Refactor Medicine and Prescription entities for improved bidirectional relationship handling and introduce inventory integration for Medicine, associating each Medicine with an Inventory item.

Simplify Prescription creation and retrieval by using a new PrescriptionRequest object for encapsulated data transfer, reducing parameter clutter.

Update Inventory structure by removing item codes and integrating new logging and restock warning mechanism, ensuring effective tracking of stock changes.

Add comprehensive test cases for thorough validation of the refactored Prescription and Inventory functionalities.

Fixes #456